# gauges

./: Cargo.toml  README.md  gauges.toml
assets/: style.css
examples/: canbus.rs  client.rs  dashboard.rs
src/: app.rs  core.rs  desktop.rs  lib.rs  main.rs  net.rs  style.css
src/app/: dashboard.rs  gauge.rs
