[package]
name = "gauges"
version = "0.0.1"
authors = ["Alessandro Pezzato <alessandro.pezzato@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["visualization", "drawing"]
repository = "https://github.com/alepez/gauges"
homepage = "https://github.com/alepez/gauges"
readme = "README.md"
categories = ["visualization"]
description = "A tool to visualize real time gauges"
documentation = "https://github.com/alepez/gauges"
exclude = [".gitignore"]

[[bin]]
name = "gauges-server"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "46cc07e" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "46cc07e" }
dioxus-hot-reload = { git = "https://github.com/DioxusLabs/dioxus", rev = "46cc07e" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "*" }
tokio-util = { version = "*", features = ["codec"] }
